Fixed alignment of social buttons in login

--- a/Watch2Gether/login/static/login/css/style.css
+++ b/Watch2Gether/login/static/login/css/style.css
@@ -46,6 +46,8 @@ body {
     float: left;
     font-size: 20px;
     line-height: 25px;
+    width: 30px;
+    text-align: center;
 }
 
 .btn-google {
